    + [BR] Apply patch from Johannes Schauer in order
      to detect obsolete XS-Testsuite header.
      (Closes: #770068).
    + [AB] New check for multiline architecture fields in debian/control.
      (Closes: #780474)
    + [NT] Apply patch from Guillem Jover to update the description
      of the xs-testsuite-header-in-debian-control tag.
      (Closes: #781397)
  * checks/cruft.{desc,pm}:
    + [NT] Import "d/pycompat is deprecated" check from
      lintian4python.
  * checks/deb-format.{desc,pm}:
    + [BR] Support all format described in deb(5)
      but manually reject until dak is ready.
  * checks/debian-source-dir.pm:
    + [NT] Fix regression where "missing-debian-source-format" was
      not emitted if "debian/source" was missing.  Thanks to
      Jean-Michel Nirgal Vourgère for finding this bug.
      (Closes: #781235)
  * checks/dbus.{desc,pm}:
    + [NT] Apply patch series from Simon McVittie to
      improve the dbus check.  In particular, detect dbus
      policy files that exposes CVE-2014-8148 and
      CVE-2014-8156.  (Closes: #776480)
  * checks/fields.{desc,pm}:
    + [BR] Add reference to build-depends-on-metapackage
      (Closes: #767107).
    + [BR] Check source version (Closes: #749103).
    + [NT] Import check of "Python-version: current" being
      deprecated from lintian4python.
    + [AB] Remove "dev" from list of suffixes to trigger
      rc-version-greater-than-expected-version (Closes: #732246)
    + [AB] Recognize user@host:path.git URIs in Vcs-Git (Closes: #778323)
  * checks/files.{desc,pm}:
    + [BR] Rename compressed-objects.inv to
      file-should-not-be-compressed and use it for doxygen
      map.gz.  (Closes: #751949).
    + [NT] Merge patch from Nicolas Boulenguez to remove some
      partially redundant code.  (Closes: #784277)
  * checks/init.d.desc:
    + [BR] Add reference to #DEBHELPER# token for
      script-in-etc-init.d-not-registered-via-update-rc.d.
      (Closes: #775467).
  * checks/patch-systems.pm: